<resources>
    <string name="app_name">Proyecto</string>
    <string name="titulo">Registro: RappiCoop</string>
    <string name="titulo_L">RappiCoop</string>
    <string name="nombre">Nombre Completo</string>
    <string name="user">Nombre de usuario</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="aceptar">Registrar</string>
    <string name="cancelar">Ya Registrado</string>
    <string name="titulo2">Registrado</string>
    <string name="ok">OK</string>
    <string name="confirmacion">Confirma Contraseña</string>
    <string name="tituloG">RAPPICOOP</string>
    <string name="welcome">Bienvenido</string>
    <string name="aProduct">Añadir Producto</string>
    <string name="Titulo_prod">AGREGAR PRODUCTO</string>
    <string name="nombre_pro">Nombre del Producto</string>
    <string name="desc_pro">Descripcion del Producto</string>
    <string name="val_pro">Valor de Venta</string>
    <string name="restaurante">Nombre del Local</string>
    <string name="volver">Regresar</string>
    <string name="dProduct">Eliminar Producto</string>
    <string name="iDpro">Id del Producto que desea eliminar</string>
    <string name="view">Mostrar</string>
    <string name="edad">Edad</string>
    <string name="sProduct">Buscar Producto</string>
    <string name="searched">Productos Encontrados</string>
    <string name="date_pro">Fecha de vencimiento (DD/MM/AAAA)</string>
    <string name="search_pro">Nombre del producto</string>
    <string name="Titulo_Order">CREAR ORDEN</string>
    <string name="send">GENERAR FACTURA</string>
    <string name="eliminar">Eliminar Producto</string>
    <string name="details">Ver Detalles de compra</string>
    <string name="cOrder">Crear Pedido</string>
</resources>