<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_Return"
        android:title="@string/volver"
        android:icon="@drawable/ic_baseline_arrow_back_24"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_location"
        android:title="@string/volver"
        android:icon="@drawable/ic_baseline_location_on_24"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_delete"
        android:title="@string/eliminar"
        android:icon="@drawable/ic_baseline_delete_24"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_AddProduct"
        android:title="@string/aProduct"
        android:icon="@drawable/ic_baseline_add_24"
        android:orderInCategory="4"
        app:showAsAction="ifRoom"
        />

</menu>