<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@color/orange"
    tools:context=".Products_Form.DeleteProduct_Form">

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloG"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="35dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/dProduct"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="30dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:gravity="left"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/dIdProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/iDpro"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/dProduct"
        android:textSize="20dp"
        android:onClick="deleteProdruct"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/volver"
        android:textSize="20dp"
        android:onClick="Regresar"
        />

</LinearLayout>