<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Products_Form.AddProduct_Form">

    <include
        layout="@layout/toolbar"
        android:id="@+id/tool"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="@string/Titulo_prod"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_baseline_add_photo_alternate_24"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Seleccionar Imagen"
        android:onClick="ImageSelect"
        />

    <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="15dp"
            android:ems="10"
            android:hint="@string/nombre_pro"
            />

        <EditText
            android:id="@+id/editdescrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/desc_pro" />

        <EditText
            android:id="@+id/editValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/val_pro"
            android:inputType="number"
            />

        <EditText
            android:id="@+id/editExpedition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/date_pro"
            android:inputType="date"
            />

        <EditText
            android:id="@+id/editLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/restaurante"
            />

        <RadioGroup
            android:id="@+id/selectRol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rol:"
                android:textStyle="bold"
                android:textSize="15sp"
                />

            <RadioButton
                android:id="@+id/radioDrink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="Bebida"
                android:textSize="15sp"
                android:textStyle="bold"
                android:onClick="radioClickedCategory"
                />

            <RadioButton
                android:id="@+id/radioFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="Comida"
                android:textSize="15sp"
                android:textStyle="bold"
                android:onClick="radioClickedCategory"
                />
        </RadioGroup>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            >

        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="addProducto"
            android:text="@string/aceptar" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="25dp"
                android:onClick="viewProduct"
                android:text="@string/view" />

        </RadioGroup>

        </LinearLayout>

    </ScrollView>

</LinearLayout>