<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo_6"
    tools:context=".Products_Form.SearchProduct_View">

    <include
        layout="@layout/toolbar"
        android:id="@+id/tool"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searched"
        android:gravity="center"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/search_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="15dp"
        android:hint="@string/search_pro"
        android:textColor="@color/black"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sProduct"
        android:layout_gravity="right"
        android:layout_marginRight="15dp"
        android:onClick="search"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >



        </LinearLayout>
    </ScrollView>

</LinearLayout>