<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@drawable/fondo_4"
    tools:context=".User_Forms.SingUp_Form">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        />

        <EditText
            android:id="@+id/editFullNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="text"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            />

    <EditText
        android:id="@+id/editAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/edad"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        />

        <EditText
            android:id="@+id/editCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/correo"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            />

        <EditText
            android:id="@+id/editContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            />


        <EditText
            android:id="@+id/editConfirmacionContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/confirmacion"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            />

    <RadioGroup
        android:id="@+id/selectGenero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Genero:"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="Hombre"
            android:textStyle="bold"
            android:textSize="15sp"
            android:onClick="radioClickedGender"
            android:textColor="@color/white"
            />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="Mujer"
            android:textStyle="bold"
            android:textSize="15sp"
            android:onClick="radioClickedGender"
            android:textColor="@color/white"
            />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/selectRol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rol:"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/white"
            />

        <RadioButton
            android:id="@+id/radioClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="Cliente"
            android:textStyle="bold"
            android:textSize="15sp"
            android:onClick="radioClickedRol"
            android:textColor="@color/white"
            />

        <RadioButton
            android:id="@+id/radioVendor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="Vendedor"
            android:textStyle="bold"
            android:textSize="15sp"
            android:onClick="radioClickedRol"
            android:textColor="@color/white"
            />

        <RadioButton
            android:id="@+id/radioRepart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="Repartidor"
            android:textStyle="bold"
            android:textSize="15sp"
            android:onClick="radioClickedRol"
            android:textColor="@color/white"
            />
    </RadioGroup>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:text="@string/aceptar"
            android:onClick="Registrar"
            android:backgroundTint="@color/purple_700"
            />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:text="@string/cancelar"
            android:onClick="Regresar"
            android:backgroundTint="@color/purple_700"
            />
    </RadioGroup>

</LinearLayout>